# chore-management-api

./: .gitignore  .prettierignore  API.md  CNAME  Dockerfile  README.md  behave.ini  build.gradle  dev-start.sh  docker-compose.yaml  gradlew  openapi.json  openapi.yaml  openapi.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  run-tests.sh  settings.gradle  tsconfig.json  tslint.json
.github/scripts/: lint.sh
.github/workflows/: ci.yml  docs.yml  publish.yml  static.yml
alembic/: env.py
alembic/versions/: 049435ad5cdc_initial_migration.py  29b84bba7767_initial_migration.py  4f13bbeec380_initial_migration.py  7a6fdba1ba11_add_rotations.py  844dc2b45c36_initial_migration.py  92e2d13b3f51_initial_migration.py  9a44996b3b90_initial_migration.py  a548ce2f20a3_initial_migration.py  a6c99a74321e_initial_migration.py  aebed5ab986b_initial_migration.py  b492c0a0840d_initial_migration.py  c298a10c6be5_initial_migration.py
app/: __init__.py
app/api/: __init__.py  chore_types.py  chores.py  system.py  tickets.py  transfers.py  users.py  week_ids.py  weekly_chores.py
app/core/: config.py  constants.py  deactivated_weeks.py  i18n.py  logging.py  metadata.py  params.py  patterns.py  users.py  utils.py  version.py  week_ids.py  weekly_chores.py
app/crud/: __init__.py  base.py  chore_types.py  chores.py  deactivated_weeks.py  rotations.py  settings.py  system.py  tickets.py  transfers.py  user.py
app/db/: __init__.py  db.py  init_database.py  session.py  tables.py
app/dependencies/: auth.py  db.py  pages.py
app/middlewares/: correlator.py  db.py  errors.py  logging.py
app/models/: __init__.py  chore.py  chore_type.py  common.py  deactivated_weeks.py  extras.py  rotations.py  settings.py  ticket.py  transfer.py  user.py  weekly_chores.py
app/routes/: __init__.py  users.py
app/translations/: actions.en.yml  actions.es.yml  auth.en.yml  auth.es.yml  chores.en.yml  chores.es.yml  crud.en.yml  crud.es.yml  deactivated_weeks.en.yml  deactivated_weeks.es.yml  generic.en.yml  generic.es.yml  models.en.yml  models.es.yml  transfers.en.yml  transfers.es.yml  weekly_chores.en.yml  weekly_chores.es.yml
delivery/: Dockerfile  entrypoint.sh
docs/: CNAME  index.html  openapi.yaml  openapi.yml
docs/assets/: openapi.yaml
migrations/: 1666951364105-start.js  1667142036385-choreType.js  1667212940381-start.js  1668296402816-start.js
prisma/: schema.prisma
src/: express.d.ts  index.ts
src/controllers/: choreTypes.ts  flats.ts  index.ts  tickets.ts  users.ts  weekId.ts
src/core/: auth.ts  config.ts  constants.ts  datasource.ts  openapi.ts  utils.ts  weekId.ts
src/mappers/: tickets.ts
test/: .gitignore  behave.ini  conftest.py  constants.py  environment.py  pyproject.toml  pytest.ini
utils/: entrypoint.sh  init_database.py  prometheus.yml
(+447 files in other folders)
