[tool.poetry]
name = "chore-management-api"
version = "0.1.0"
description = "Chore Management API"
authors = ["Diego Alloza González <diego.allozagonzalez@telefonica.com>"]
packages = [
    { include = "app"},
]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.45"
fastapi = "^0.88.0"
pydantic = "^1.10.4"
python-dotenv = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
cryptography = "^39.0.0"
alembic = "^1.8.1"
greenlet = "^2.0.1"
prometheus-fastapi-instrumentator = "^5.9.1"
PyMySQL = "^1.0.2"
databases = {extras = ["aiomysql"], version = "^0.7.0"}
orjson = "^3.8.3"
APScheduler = "^3.9.1"
toml = "^0.10.2"
python-i18n = {extras = ["YAML"], version = "^0.3.9"}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
ruff = "^0.0.209"
allure-behave = "^2.12.0"
behave = "^1.2.6"
deepdiff = "^6.2.1"
dotty-dict = "^1.3.1"
Faker = "^15.3.3"
jq = "^1.3.0"
jsonschema = "^4.17.3"
mysql-connector-python = "^8.0.31"
PyHamcrest = "^2.0.4"
pytest = "^7.2.0"
python-dateutil = "^2.8.2"
requests = "^2.28.1"
toolium = "^2.6.2"
prometheus-client = "^0.15.0"
icecream = "^2.1.3"
ipykernel = "^6.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I", "N", "ARG"]

[tool.ruff.isort]
known-first-party = ["common", "constants"]
